--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
     <title>React App</title>
   </head>
@@ -44,5 +44,6 @@
     <script src="%PUBLIC_URL%/jquery.js"></script>
     <script src="%PUBLIC_URL%/popper.js"></script>
     <script src="%PUBLIC_URL%/bootstrap.js"></script>
+
   </body>
 </html>
