--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -26,7 +25,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
-    <title>React App</title>
+    <title>Random number</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
